# SistDistrib2C2017

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: constants.h
include/admin/: admin.h
include/cinema/: cinema_handler.h
include/client/: client_utils.h
include/db/: db_api.h
include/ipc/: communicationqueue.h  queue.h  semaphore.h  sharedmemory.h
include/messages/: message.h
include/middleware/: client.h  client_interface.h
include/network/: network_comm.h  socket.h
include/utils/: TextTable.h
src/admin/: CMakeLists.txt  admin.cpp
src/cinema/: CMakeLists.txt  cinema.cpp  cinema_handler.cpp
src/client/: CMakeLists.txt  client.cpp  client_utils.cpp
src/db/: db_api.cpp
src/ipc/: communicationqueue.cpp  queue.cpp  semaphore.cpp  sharedmemory.cpp
src/middleware/: CMakeLists.txt  client.cpp  client_interface.cpp  mom.cpp
src/network/: network_comm.cpp  socket.cpp
src/utils/: CMakeLists.txt  database_data_init.cpp  destructor.cpp  initializer.cpp
test/: CMakeLists.txt  commqueue_test.cpp
test/db_test/: CMakeLists.txt  db_test.cpp
test/socket_test/: CMakeLists.txt  socket_test.cpp
